<resources>
    <string name="app_name">WebLiga</string>
    <string name="action_settings">Settings</string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="loguj_button">Zaloguj się</string>
    <string name="multiliga">Multiliga</string>
    <string name="witaj">Witaj!</string>
    <string name="toolbarTitle">Multiliga</string>
    <string name="zalogujToolbar">Zaloguj się</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="zarejestrujToobar">Zarejestruj</string>
    <string name="anulujLogowanie">Anuluj</string>
    <string name="zarejestrujButton">Stwórz konto</string>
    <string name="graczRegister">Gracz</string>
    <string name="kapitanRegister">Kapitan</string>
    <string name="sedziaRegister">Sędzia</string>
    <string name="organizatorRegister">Organizator</string>
    <string name="loginError">Login nie może być pusty</string>
    <string name="hasloError">Hasła nie są takie same</string>
    <string name="imieError">Imię nie może być puste</string>
    <string name="nazwiskoError">Nazwisko nie może być puste</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="searchTeamTV">Wyszukaj zespół</string>
    <string name="enterNameOfTeamTV">Wpisz nazwę zespołu lub jego część:</string>
    <string name="SearchTeamBtn">Wyszukaj</string>
    <string name="mojeMeczeTitle">Moje mecze</string>
    <string name="sędziaMojeMecze">Sędzia</string>
    <string name="kapitanMojeMecze">Kapitan</string>
    <string name="graczMojeMecze">Gracz</string>
    <string name="orgarnizatorMojeMecze">Orgarnizator</string>
    <string name="wylogujToolbar">Wyloguj</string>
    <string name="title_activity_change_results">ChangeResultsActivity</string>
    <string name="changeResultsTitle">Wprowadź wynik</string>
    <string name="title_activity_team_details">TeamDetailsActivity</string>
    <string name="wpisz_nazw_grupy">Wpisz nazwę grupy:</string>
    <string name="liczba_uczestnikow">Liczba uczestników:</string>
</resources>
