<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.apsi.webliga.RegisterActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zarejestrujButton"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:background="@color/abc_search_url_text_normal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:textSize="40px"
        android:onClick="zarejestruj"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/haslo"
        android:password="false"
        android:hint="Hasło"
        android:layout_below="@+id/login"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:hint="Login"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/powtorzHaslo"
        android:hint="Powtorz haslo"
        android:layout_below="@+id/haslo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imie"
        android:hint="Imie"
        android:layout_below="@+id/powtorzHaslo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nazwisko"
        android:hint="Nazwisko"
        android:layout_below="@+id/imie"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/multiliga"
        android:id="@+id/textView"
        android:textSize="@dimen/abc_action_bar_stacked_max_height"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anulujLogowanie"
        android:id="@+id/buttonAnuluj"
        android:layout_alignTop="@+id/button"
        android:layout_marginTop="57dp"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/abc_search_url_text_normal"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:textSize="40px"
        android:onClick="anuluj"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graczRegister"
        android:id="@+id/graczRegister"
        android:layout_below="@+id/nazwisko"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kapitanRegister"
        android:id="@+id/kapitanRegister"
        android:layout_below="@+id/nazwisko"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organizatorRegister"
        android:id="@+id/organizatorRegister"
        android:layout_below="@+id/nazwisko"
        android:layout_alignRight="@+id/nazwisko"
        android:layout_alignEnd="@+id/nazwisko" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sedziaRegister"
        android:id="@+id/sedziaRegister"
        android:layout_below="@+id/nazwisko"
        android:layout_toLeftOf="@+id/organizatorRegister"
        android:layout_toStartOf="@+id/organizatorRegister" />


</RelativeLayout>
